# dxmt

./: .gitignore  .gitmodules  LICENSE  README.md  build-win64-wine-test.txt  dxmt.conf  dxmt_d3d12_metal4_supplemental_test_plan.md  meson.build  meson.options
benchmarks/: README.md  meson.build
benchmarks/budgets/: d3d12_binding_hotspots.json  d3d12_core_micro.json  d3d12_gpu_throughput.json  d3d12_pipeline_creation.json  d3d12_pipeline_micro.json  d3d12_shader.json  placeholder.json  test_scheduler.json
benchmarks/suites/: meson.build  placeholder_benchmark.cpp  test_scheduler_benchmark.cpp
benchmarks/support/: benchmark_acceptance.py  main.cpp
benchmarks/wine/: d3d12_binding_hotspot_benchmark.cpp  d3d12_core_micro_benchmark.cpp  d3d12_gpu_throughput_benchmark.cpp  d3d12_integration_benchmark.cpp  d3d12_pipeline_creation_benchmark.cpp  d3d12_shader_benchmark.cpp  meson.build  ue_d3d11_initialization.cpp  ue_d3d12_initialization.cpp  ue_initialization_benchmark.cpp
libs/DXILParser/: DXILOpcodeInfo.hpp  DXILParser.cpp  DXILParser.hpp  meson.build
src/: meson.build
src/airconv/: air_signature.cpp  air_signature.hpp  airconv_cli.cpp  airconv_context.cpp  airconv_dx12_metal4.h  airconv_public.h  dxbc_converter.cpp  dxbc_converter.hpp  dxbc_converter_basicblock.cpp  dxbc_converter_cfg.cpp  dxbc_converter_gs.cpp  dxbc_converter_ts.cpp  dxbc_instructions.cpp  dxbc_instructions.hpp  dxbc_signature.cpp  dxil_air_converter.cpp  dxil_air_converter.hpp  dxil_converter.cpp  dxso_compile.cpp  dxso_compile.hpp  dxso_decoder.hpp  dxso_header.hpp  ffp_compile.cpp  ffp_compile.hpp  meson.build
src/d3d10/: d3d10_device.cpp  d3d10_query.hpp  d3d10core.cpp  meson.build
src/d3d11/: d3d11.cpp  d3d11_buffer.cpp  d3d11_context_def.cpp  d3d11_context_imm.cpp  d3d11_context_impl.cpp  d3d11_context_state.hpp  d3d11_device.cpp  d3d11_device.hpp  d3d11_device_child.hpp  d3d11_fence.cpp  d3d11_interfaces.hpp  d3d11_multithread.cpp  d3d11_multithread.hpp  d3d11_pipeline.cpp  d3d11_pipeline.hpp  d3d11_pipeline_cache.cpp  d3d11_pipeline_gs.cpp  d3d11_pipeline_ts.cpp  d3d11_query.cpp  d3d11_query.hpp  d3d11_resource.hpp  d3d11_resource_helper.cpp  d3d11_resource_staging.cpp  d3d11_resource_view_helper.cpp  d3d11_shader.cpp  d3d11_shader.hpp  d3d11_state_object.cpp  d3d11_state_object.hpp  d3d11_swapchain.cpp  d3d11_texture_device.cpp  d3d11_texture_linear.cpp  d3d11_view.hpp  meson.build
src/d3d12/: d3d12.cpp  d3d12.def  d3d12_agility.hpp  d3d12_command_allocator.cpp  d3d12_command_allocator.hpp  d3d12_command_list.cpp  d3d12_command_list.hpp  d3d12_command_queue.cpp  d3d12_command_queue.hpp  d3d12_compiled_descriptor_range.hpp  d3d12_descriptor_heap.cpp  d3d12_descriptor_heap.hpp  d3d12_descriptor_journal.hpp  d3d12_descriptor_mirror.cpp  d3d12_descriptor_mirror.hpp  d3d12_descriptor_shape.hpp  d3d12_device.cpp  d3d12_device.hpp  d3d12_dxgi_backend.cpp  d3d12_fence.cpp  d3d12_fence.hpp  d3d12_frame_interop.cpp  d3d12_frame_interop.hpp  d3d12_heap.cpp  d3d12_heap.hpp  d3d12_interfaces.hpp  d3d12_pipeline.cpp  d3d12_pipeline.hpp  d3d12_private.h  d3d12_query.cpp  d3d12_query.hpp  d3d12_resource.cpp  d3d12_resource.hpp  d3d12_root_signature.cpp  d3d12_root_signature.hpp  d3d12_sampler.cpp  d3d12_sampler.hpp  d3d12core.cpp  meson.build  version.rc
src/d3d9/: d3d9.cpp  d3d9.def  d3d9_buffer.cpp  d3d9_buffer.hpp  d3d9_buffer_map.hpp  d3d9_clear_quad.cpp  d3d9_clear_quad.hpp  d3d9_common_texture.hpp  d3d9_create_validation.hpp  d3d9_cube_texture.cpp  d3d9_cube_texture.hpp  d3d9_cursor_validation.hpp  d3d9_device.cpp  d3d9_device.hpp  d3d9_diag.hpp  d3d9_enc_state.hpp  d3d9_format.cpp  d3d9_format.hpp  d3d9_fvf.cpp  d3d9_fvf.hpp  d3d9_gamma.hpp  d3d9_ia_element.hpp  d3d9_image_lock.hpp  d3d9_interface.cpp  d3d9_interface.hpp  d3d9_matrix.hpp  d3d9_mem.cpp  d3d9_mem.hpp  d3d9_multithread.hpp  d3d9_point_size.hpp  d3d9_present_validation.hpp  d3d9_private_data.hpp  d3d9_process_vertices.hpp  d3d9_ps_variant_key.hpp  d3d9_query.cpp  d3d9_query.hpp  d3d9_query_contract.hpp  d3d9_render_state_translate.hpp  d3d9_resource_priority.hpp  d3d9_sampler_translate.hpp  (+31 more)
src/dxgi/: dxgi.cpp  dxgi_adapter.cpp  dxgi_factory.cpp  dxgi_interfaces.h  dxgi_output.cpp  dxgi_resource.hpp  meson.build
src/dxmt/: dxmt_allocation.cpp  dxmt_allocation.hpp  dxmt_apitrace.cpp  dxmt_apitrace.hpp  dxmt_apitrace_d3d.cpp  dxmt_apitrace_d3d.hpp  dxmt_binding_set.hpp  dxmt_bindless_buffer_table.hpp  dxmt_buffer.cpp  dxmt_buffer.hpp  dxmt_capture.cpp  dxmt_command.cpp  dxmt_command.hpp  dxmt_command.metal  dxmt_command_list.hpp  dxmt_command_queue.cpp  dxmt_command_queue.hpp  dxmt_context.cpp  dxmt_context.hpp  dxmt_deptrack.cpp  dxmt_deptrack.hpp  dxmt_descriptor_mirror.hpp  dxmt_format.cpp  dxmt_format.hpp  dxmt_frame_interpolation.cpp  dxmt_frame_interpolation.hpp  dxmt_hud_state.cpp  dxmt_occlusion_query.hpp  dxmt_perf_stats.cpp  dxmt_perf_stats.hpp  dxmt_pipeline_diag.cpp  dxmt_pipeline_diag.hpp  dxmt_present_source_view.hpp  dxmt_presenter.cpp  dxmt_presenter.hpp  dxmt_resource_initializer.cpp  dxmt_resource_initializer.hpp  dxmt_ring_bump_allocator.hpp  dxmt_shader_cache.cpp  dxmt_shader_cache.hpp  (+7 more)
src/nativemetal/: meson.build
src/nvapi/: meson.build  nvapi.cpp  nvapi_d3d12.cpp  nvapi_d3d12.hpp  nvapi_frame_markers.cpp  nvapi_frame_markers.hpp
src/nvngx/: meson.build  nvngx.cpp  nvngx_d3d12.cpp  nvngx_d3d12.hpp  nvngx_frame_interpolation.cpp  nvngx_frame_interpolation.hpp
src/util/: dxbc_checksum.cpp  dxbc_checksum.hpp  meson.build  objc_pointer.hpp  thread.hpp  threadpool.hpp  util_bit.hpp  util_cpu_fence.hpp  util_d3dkmt.h  util_env.cpp  util_fh4_bypass.cpp  util_fh4_bypass.hpp  util_lifecycle_telemetry.hpp  util_math.hpp  util_mingw_pthread_compat.cpp  util_string.cpp  util_string.hpp  util_svector.hpp  util_win32_compat.h  wsi_platform_darwin.cpp  wsi_window.hpp  wsi_window_headless.cpp  wsi_window_win32.cpp
src/winemetal/: Metal.hpp  airconv_thunks.c  airconv_thunks.h  main.c  meson.build  (+3 more)
tests/: README.md  framework_test.cpp  meson.build  run_dxmt_smoke.py  static_buffer_rtv.py  winemetal4_present_order.py
(+1185 files in other folders)
