option('native_llvm_path', type : 'string', value: '/usr/local/opt/llvm@15')
option('build_airconv_for_windows', type : 'boolean', value : false)
option('dxmt_debug', type : 'boolean', value : false)
option('dxmt_version', type : 'string', value : '')
option('dxmt_native', type : 'boolean', value : false, deprecated : true)
option('wine_build_path', type : 'string', value : 'external/wine/build', description : 'Managed Wine build/cache directory; leave empty when using wine_install_path')
option('wine_source_path', type : 'string', value : 'external/wine', description : 'Wine source tree used by the managed build; use wine-proton-macos for a runnable test cache')
option('wine_configure_args', type : 'array', value : ['--enable-archs=i386,x86_64'])
option('wine_install_path', type : 'string', description : 'Complete external Wine cache root used for linking and runtime tests')
option('wine_runtime_preparer_path', type : 'string', value : '', description : 'Wine development-cache preparer used to bundle relocatable runtime dependencies')
option('wine_builtin_dll', type : 'boolean', value : true)
option('enable_tests', type : 'boolean', value : false, description : 'Build native macOS GoogleTest unit tests')
option('enable_d3d12_tests', type : 'boolean', value : false, description : 'Build Wine D3D unit tests and integration benchmarks')
option('enable_benchmarks', type : 'boolean', value : false, description : 'Build native macOS performance benchmarks')
option('enable_nvapi', type : 'boolean', value : false)
option('enable_nvngx', type : 'boolean', value : false)
option('apitrace_builtin', type : 'boolean', value : false)
option('apitrace_source_path', type : 'string', value : 'external/apitrace')
option('apitrace_build_path', type : 'string', value : '')
